CMAKE_MINIMUM_REQUIRED(VERSION 2.4)


SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib")

FIND_PACKAGE(Apache2 REQUIRED)

INCLUDE_DIRECTORIES(${HTTPD_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${APR_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${APRUTIL_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/apache/mod_hello)

SET(mod_hello_SRCS mod_hello.c)

#LINK_LIBRARIES(lve)
#ADD_DEFINITIONS(-DAPACHE_USER="\\"${APACHE_USER}\\"")

SET_SOURCE_FILES_PROPERTIES(${mod_hello_SRCS} PROPERTIES COMPILE_FLAGS "-g2 -DHAVE_CONFIG_H -DLINUX=2 -D_REENTRANT -D_GNU_SOURCE")

ADD_LIBRARY(mod_hello MODULE ${mod_hello_SRCS})
SET_TARGET_PROPERTIES(mod_hello PROPERTIES PREFIX "" SUFFIX ".so")

TARGET_LINK_LIBRARIES(mod_hello ${APR_LIBRARY})

install(TARGETS mod_hello
        DESTINATION ${HTTPD_MODULES}
        COMPONENT Runtime)
